# STM32_SD_Card_Manager

./: .clangd  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  FLAGS.md  HOWTOGIT.md  NAMING.md  README.md  STM32_Music_Player.ioc  STM32_SD_Card_Manager.ioc  TASKS.md  test.txt
Core/Inc/: defines.hpp  defs.hpp  main.h  status.hpp  stm32l4xx_hal_conf.h  utils.hpp
Core/Inc/App/: command_handler.hpp  hal_init.hpp  input_handler.hpp
Core/Inc/C++/: _iwdg.hpp  gpio.hpp  ptimer.hpp
Core/Inc/C++/Connectivity/: spi.hpp  uart.hpp
Core/Inc/C++/System_Core/: gpio.hpp
Core/Inc/Modules/: file.hpp  filesystem.hpp  sd.hpp  sd_file.hpp  sd_filesystem.hpp
Core/Inc/Peripherals/: uart_io.hpp
Core/Src/: entry.cpp  main.c  main.cpp  stm32l4xx_hal_msp.c  stm32l4xx_it.c  syscalls.c  utils.cpp
Core/Src/App/: command_handler.cpp  hal_init.cpp
Core/Src/App/Commands/: cat.cpp  cd.cpp  common_cmds.cpp  cp.cpp  dir_cmds.cpp  echo.cpp  ls.cpp  mv.cpp  receive.cpp  rm.cpp  script.py  send.cpp  touch.cpp
Core/Src/C++/: _iwdg.cpp  gpio.cpp  ptimer.cpp
Core/Src/C++/Connectivity/: spi.cpp  uart.cpp
Core/Src/C++/System_Core/: gpio.cpp
Core/Src/Modules/: filesystem.cpp  sd.cpp  sd_file.cpp  sd_filesystem.cpp  sd_reader.cpp
Core/Src/Peripherals/: uart_io.cpp
Core/Temp/Src/App/Commands/: cat.cpp  cd.cpp  common_cmds.cpp  cp.cpp  echo.cpp  ls.cpp  rm.cpp
Core/Tests/: test_sd.cpp  tests.cpp  tests.hpp
Docs/: NAMING_CONV.md
Libs/: CMakeLists.txt
Libs/printf/: CMakeLists.txt  printf.c  printf.h
Libs/scal/: CMakeLists.txt  MACROS.md
Libs/scal/inc/scal/: defs.hpp  gpio.hpp  iwdg.hpp  ptimer.hpp  spi.hpp  uart.hpp
Libs/scal/src/: gpio.cpp  iwdg.cpp  ptimer.cpp  spi.cpp  uart.cpp
Libs/stm32_cpp_abstractions/: CMakeLists.txt  defs.hpp
Libs/stm32_cpp_abstractions/Connectivity/: spi.cpp  spi.hpp  uart.cpp  uart.hpp
Libs/stm32_cpp_abstractions/System_Core/: gpio.cpp  gpio.hpp  iwdg.cpp  iwdg.hpp
Libs/stm32_cpp_abstractions/Timers/: ptimer.cpp  ptimer.hpp
SW/: CMakeLists.txt  defs.py  main.cpp  main.py  status.py  utils.py
SW/Inc/: defs.hpp  ff.hpp  status.hpp  utils.hpp
SW/Inc/App/: command_handler.hpp
SW/Libs/: CMakeLists.txt
SW/Src/: entry.cpp  main.cpp  utils.cpp
SW/Src/App/: command_handler.cpp
SW/Src/App/Commands/: cat.cpp  cd.cpp  common_cmds.cpp  cp.cpp  dir_cmds.cpp  echo.cpp  ls.cpp  mv.cpp  rm.cpp  touch.cpp
Temp/Src/App/: command_handler.cpp
Temp/Src/App/Commands/: cat.cpp  cd.cpp  common_cmds.cpp  cp.cpp  ls.cpp
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
